fixes hidden stuck path

--- a/components/path/stylesheets/path.styl
+++ b/components/path/stylesheets/path.styl
@@ -25,6 +25,11 @@
 .path.stuck
   position fixed
   z-index header_z
+  transform translate3d(0, 0, 1px)
+  -webkit-transform translate3d(0, 0, 1px)
+  -moz-transform translate3d(0, 0, 1px)
+  -o-transform translate3d(0, 0, 1px)
+  transform translate3d(0, 0, 1px)
   top 1px
   left 0px
   height 38px
@@ -150,6 +155,6 @@ privacy-color('.path__breadcrumb li.path__channel.privacy-', color)
 
   .root__toggle
     margin -3px 0 0 0
-  
+
   .path__inner
     padding 0
